<resources>
    <string name="app_name">WhatsappUi</string>

    <!-- TOOLBAR TEXT -->
    <string name="toolBarName">WhatsApp</string>
    <string name="toolBarContact">Select Contact</string>
    <string name="toolBarSettings">Settings</string>
    <string name="toolBarChatSettings">Chats</string>

    <!-- TEXT BELOW TOOLBAR  -->
    <string name="contactNumber">100 contacts</string>
    <string name="new_group_below">Add participants</string>
    <string name="new_broadcast_below">0 0f 100 contacts selected</string>

    <!-- Main Menu Items -->
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="whatsapp_web">WhatsApp Web</string>
    <string name="starred_messages">Starred messaged</string>
    <string name="settings">Settings</string>

    <!-- Contact Menu Items -->
    <string name="invite">Invite a friend</string>
    <string name="contacts">Contacts</string>
    <string name="refresh">Refresh</string>
    <string name="help">Help</string>

    <!-- Content Description -->
    <string name="content_desc">Search Button</string>
    <string name="content_desc1">Profile Photo</string>
    <string name="content_descMiss">Missed Call</string>
    <string name="content_descIn">Incoming Calls</string>
    <string name="content_descOut">Outgoing Calls</string>

    <!-- Tab text -->
    <string name="camera">CAMERA</string>
    <string name="chats">CHATS</string>
    <string name="status">STATUS</string>
    <string name="calls">CALLS</string>

    <!-- TEXT -->
    <string name="lastMessage">Hi, How are you doing?</string>
    <string name="callDateandTime">15 June, 15:38</string>
    <string name="myStatus">My Status</string>
    <string name="tapHere">Tap here to add status</string>

    <!-- BROADCAST INFO -->
    <string name="new_broadcast_info">Only contacts with +234 812 230 7048 in their
    address book will receive your broadcast messages</string>

    <!-- SETTINGS TEXT-->
    <string name="userProfileName">Ichi No Kata</string>
    <string name="aboutUser">Beautiful Mind</string>
    <string name="userAccount">Account</string>
    <string name="userAccountDetails">Privacy, security, change number</string>
    <string name="userChat">Chats</string>
    <string name="userChatDetails">Theme, wallpapers, chat history</string>
    <string name="userNotification">Notifications</string>
    <string name="userNotificationDetails">Message, group &amp; call tones</string>
    <string name="dataStorage">Data and storage usage</string>
    <string name="dataStorageDetails">Network usage, auto-download</string>
    <string name="helpSettings">Help</string>
    <string name="helpSettingsDetails">FAQ, contact us, privacy policy</string>
    <string name="inviteSettings">Invite a friend</string>

    <!--- WATER MARK -->
    <string name="by">By</string>
    <string name="nyName">Masha Ayoola</string>

    <!-- ACCOUNT SETTINGS TEXT -->
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="verify">Two-step Verification</string>
    <string name="numChange">Change number</string>
    <string name="acctInfo">Request account info</string>
    <string name="deleteAcct">Delete Account</string>

    <!-- CHAT SETTINGS TEXT -->
    <string name="display">Display</string>
    <string name="theme">Theme</string>
    <string name="chooseTheme">Choose Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="chatSettings">Chat settings</string>
    <string name="enterSend">Enter is Send</string>
    <string name="enterSendDetails">Enter key will send your message</string>
    <string name="mediaVisible">Media visibility</string>
    <string name="mediaVisibleDetails">Show newly downloaded media in your phone\'s gallery</string>
    <string name="fontSize">Font Size</string>
    <string name="fontSizeSmall">Small</string>
    <string name="fontSizeMedium">Medium</string>
    <string name="fontSizeLarge">Large</string>
    <string name="chatBackup">Chat backup</string>
    <string name="chatHistory">Chat history</string>




</resources>