<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/invite"
        android:title="@string/invite"
        android:orderInCategory="100"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/contact"
        android:title="@string/contacts"
        android:orderInCategory="200"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:orderInCategory="300"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:orderInCategory="400"
        app:showAsAction="never">

    </item>

</menu>