<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settingsAppbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/contactToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/backArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_white"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/content_descOut"
                    />

                <TextView
                    android:id="@+id/selectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toolBarSettings"
                    android:layout_marginLeft="40dp"
                    android:textColor="@color/colorWhiteChocolate"
                    android:textSize="20sp"
                    android:layout_marginStart="40dp" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_below="@+id/settingsAppbarLayout"
        android:id="@+id/realativeLayout001"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="5dp"
        android:background="@drawable/grey_border_bottom"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userProfileImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            app:civ_border_color="@color/colorWhiteChocolate"
            app:civ_border_width="1dp"
            android:contentDescription="@string/content_desc1"
            tools:src="@tools:sample/avatars"
            android:layout_marginRight="12dp" />

        <TextView
            android:id="@+id/userProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_toRightOf="@id/userProfileImage"
            android:maxLines="1"
            android:textColor="#333333"
            android:text="@string/userProfileName"
            android:layout_toEndOf="@id/userProfileImage" />

        <TextView
            android:id="@+id/tapHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userProfileName"
            android:layout_toRightOf="@id/userProfileImage"
            android:text="@string/aboutUser"
            android:layout_toEndOf="@id/userProfileImage" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_below="@+id/realativeLayout001"
        android:id="@+id/realativeLayout002"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/userAccountIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/content_desc1"
            android:src="@drawable/ic_vpn_key"
            android:layout_marginRight="12dp" />

        <TextView
            android:id="@+id/userAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_toRightOf="@id/userAccountIcon"
            android:maxLines="1"
            android:textColor="#333333"
            android:text="@string/userAccount"
            android:layout_toEndOf="@id/userAccountIcon" />

        <TextView
            android:id="@+id/userAccountDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userAccountText"
            android:layout_toRightOf="@id/userAccountIcon"
            android:text="@string/userAccountDetails"
            android:layout_toEndOf="@id/userAccountIcon" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/realativeLayout002"
        android:id="@+id/realativeLayout003"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/userChatIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/content_desc1"
            android:src="@drawable/ic_message"
            android:layout_marginRight="12dp" />

        <TextView
            android:id="@+id/userChatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_toRightOf="@id/userChatIcon"
            android:maxLines="1"
            android:textColor="#333333"
            android:text="@string/userChat"
            android:layout_toEndOf="@id/userChatIcon" />

        <TextView
            android:id="@+id/userChatDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userChatText"
            android:layout_toRightOf="@id/userChatIcon"
            android:text="@string/userChatDetails"
            android:layout_toEndOf="@id/userChatIcon" />
    </RelativeLayout>


    <!-- NOTIFICATION SETTINGS -->
    <RelativeLayout
        android:layout_below="@+id/realativeLayout003"
        android:id="@+id/realativeLayout004"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/userNotificationIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/content_desc1"
            android:src="@drawable/ic_notifications"
            android:layout_marginRight="12dp" />

        <TextView
            android:id="@+id/userNotificationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_toRightOf="@id/userNotificationIcon"
            android:maxLines="1"
            android:textColor="#333333"
            android:text="@string/userNotification"
            android:layout_toEndOf="@id/userNotificationIcon" />

        <TextView
            android:id="@+id/userNotificationDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userNotificationText"
            android:layout_toRightOf="@id/userNotificationIcon"
            android:text="@string/userNotificationDetails"
            android:layout_toEndOf="@id/userNotificationIcon" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_below="@+id/realativeLayout004"
        android:id="@+id/realativeLayout005"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/userDataUsageIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/content_desc1"
            android:src="@drawable/ic_donut_large"
            android:layout_marginRight="12dp" />

        <TextView
            android:id="@+id/userDataUsageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_toRightOf="@id/userDataUsageIcon"
            android:maxLines="1"
            android:textColor="#333333"
            android:text="@string/dataStorage"
            android:layout_toEndOf="@id/userDataUsageIcon" />

        <TextView
            android:id="@+id/userDataUsageDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userDataUsageText"
            android:layout_toRightOf="@id/userDataUsageIcon"
            android:text="@string/dataStorageDetails"
            android:layout_toEndOf="@id/userDataUsageIcon" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_below="@+id/realativeLayout005"
        android:id="@+id/realativeLayout006"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/grey_border_bottom"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/userHelpSettingsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/content_desc1"
            android:src="@drawable/ic_help_outline"
            android:layout_marginRight="12dp" />

        <TextView
            android:id="@+id/userHelpSettingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_toRightOf="@id/userHelpSettingsIcon"
            android:maxLines="1"
            android:textColor="#333333"
            android:text="@string/helpSettings"
            android:layout_toEndOf="@id/userHelpSettingsIcon" />

        <TextView
            android:id="@+id/userHelpSettingsDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userHelpSettingsText"
            android:layout_toRightOf="@id/userHelpSettingsIcon"
            android:text="@string/helpSettingsDetails"
            android:layout_toEndOf="@id/userHelpSettingsIcon" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/realativeLayout006"
        android:id="@+id/realativeLayout007"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/grey_border_bottom"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/userInviteSettingsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/content_desc1"
            android:src="@drawable/ic_supervisor_account"
            android:layout_marginRight="12dp" />

        <TextView
            android:id="@+id/userInviteSettingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_toRightOf="@id/userInviteSettingsIcon"
            android:maxLines="1"
            android:layout_centerVertical="true"
            android:textColor="#333333"
            android:text="@string/inviteSettings"
            android:layout_toEndOf="@id/userInviteSettingsIcon" />
    </RelativeLayout>

</RelativeLayout>